# redact

./: Cargo.toml  README.md
.github/workflows/: build.yml
benches/: benches.rs
src/: config.rs  lib.rs  redaction.rs
tests/: tests.rs
tests/assets/rust_compilation_error/: keywords  redacted.txt  to_redact.txt
