[package]
name = "redact"
version = "0.2.0"
authors = ["Kafji <k@kafji.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[[bench]]
name = "benches"
harness = false

[dependencies]
aho-corasick = "0.7"
anyhow = "1.0"
atty = "0.2"
clap = "2.33"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "1.0"
criterion = "0.3"
tempfile = "3.1"
